@@ -1,3 +1,7 @@
+n/a - June 27, 2004
+
+	* install the automatic module loading script by default
+
 n/a - June 26, 2004
 
 	* Fixed font for UK in /etc/sysconfig/console
